# valuation-agent

./: .env.example  .gitignore  LICENSE  README.md  RUNNING.md  docker-compose.yml  pyproject.toml  白酒估值监控软件_实时技术实现深化调研_20260627.md
.claude/specs/baijiu-valuation-monitor/: design.md  requirements.md  tasks.md
configs/: llm.yaml  settings.yaml
configs/grafana/alerts/: rules.yaml
configs/grafana/dashboards/: valuation.json
docker/: init.sql
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts  queries.ts
frontend/src/stores/: runStore.ts
src/: export.py
src/agents/analysts/: __init__.py  fundamentals.py  industry_analyst.py  valuation_analyst.py
src/agents/debate/: bear.py  bull.py  engine.py  judge.py
src/agents/final/: estimator.py
src/agents/llm/: __init__.py  config.py  router.py  usage.py
src/agents/masters/: base.py  buffett.py  damodaran.py  fisher.py  graham.py  (+1 more)
src/api/: __init__.py  deps.py  main.py  run_registry.py  schemas_api.py
src/backend/: __init__.py  config.py  export.py  schemas.py
src/data/: base.py  collector.py  company_manager.py  competitor.py
src/db/: engine.py  models.py
src/frontend/: next.config.ts  package-lock.json
src/graph/: __init__.py  pipeline.py  state.py
src/memory/: reflection.py
src/monitor/: classifier.py  news.py
src/rag/: ingest.py  search.py
src/ui/: app.py  export.py
src/valuation/: dcf.py  dupont.py  monte_carlo.py  pe_band.py  relative.py
tests/: test_adapters.py  test_masters.py  test_pipeline.py  test_rag.py  test_valuation.py
(+104 files in other folders)
